# NeuNote

./: .env.example  .gitignore  AGENT.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  package.json
.github/: pull_request_template.md
backend/: AGENT.md  pyproject.toml
backend/app/: agent_chat.py  git_sync.py  kb.py  main.py  translate.py
backend/tests/: test_config.py  test_git_sync.py
docs/: architecture.md  knowledge-base.md
frontend/: index.html  package.json  vite.config.ts
papers/: a_comprehensive_survey_of_self_evolving_ai_agents_a_new_paradigm_bridging_founda_2.yaml  a_survey_of_self_evolving_agents_what_when_how_and_where_to_evolve_on_the_path_t.yaml  ad_agent.yaml  adapting_the_interface_not_the_model_runtime_harness_adaptation_for_deterministi.yaml  adaptive_time_series_reasoning_via_segment_selection.yaml  agent_harness_engineering_a_survey_junjie_li1_6_xi_xiao_6_yunbei_zhang_5_chen_li.yaml  agentic_harness_engineering_observability_driven_automatic_evolution_of_coding_a.yaml  anomamind.yaml  argos.yaml  auditing_agent_harness_safety.yaml  autoharness_improving_llm_agents_by_automatically_synthesizing_a_code_harness.yaml  bridging_the_last_mile_of_time_series_forecasting_with_llm_agents.yaml  can_llms_understand_time_series_anomalies.yaml  code_as_agent_harness.yaml  darwin_godel_machine_open_ended_evolution_of_self_improving_agents.yaml  dc_detector.yaml  deep_learning_for_ecg_analysis_benchmarks_and_insights_from_ptb_xl.yaml  ecg_qa_a_comprehensive_question_answering_dataset_combined_with_electrocardiogra.yaml  llm_anomaly_detection.yaml  (+40 more)
(+5 files in other folders)
