[project]
name = "paper-agent-kb-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "claude-code-sdk>=0.0.20",
  "fastapi>=0.115.0",
  "pydantic>=2.8.0",
  "pypdf>=5.0.0",
  "python-multipart>=0.0.9",
  "pyyaml>=6.0.2",
  "uvicorn[standard]>=0.30.0"
]

[tool.uv]
package = false
